plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.139'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    mavenCentral()

    maven {
        name = "Curios"
        url = uri("https://maven.theillusivec4.top")
        content {
            includeGroupByRegex "top\\.theillusivec4.*"
        }
    }

    maven {
        name = "BlameJared"
        url = uri("https://maven.blamejared.com")
        content {
            includeGroup "vazkii.patchouli"
            includeGroupByRegex "net\\.darkhax.*"
            includeGroupByRegex "com\\.blamejared.*"
            includeGroup "org.openzen.zencode"
            includeGroup "mezz.jei"
        }
    }

    maven {
        name = "CurseMaven"
        url = uri("https://www.cursemaven.com")
        content {
            includeGroup "curse.maven"
        }
    }

    maven {
        name = "Modrinth"
        url = uri("https://api.modrinth.com/maven")
    }

    maven {
        name = "firstdarkdev"
        url = uri("https://maven.firstdarkdev.xyz/snapshots")
        content {
            includeGroup 'com.lowdragmc.ldlib2'
        }
    }

    maven {
        url = uri("https://modmaven.dev/")
        content {
            includeGroup "de.mari_023"
        }
    }

    maven {
        name = "Shadows"
        url = uri("https://maven.shadowsoffire.dev/releases")
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // Mixin and lombok
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    annotationProcessor("org.projectlombok:lombok:1.18.44")
    compileOnly("org.projectlombok:lombok:1.18.44")

    // AE2
    compileOnly "org.appliedenergistics:appliedenergistics2:19.2.17:api"
    implementation "org.appliedenergistics:appliedenergistics2:19.2.17"

    // GuideME
    compileOnly "org.appliedenergistics:guideme:2.3.1:api"
    implementation "org.appliedenergistics:guideme:2.3.1"

    // AE2WtLib
    compileOnly "de.mari_023:ae2wtlib_api:19.4.1"
    implementation "de.mari_023:ae2wtlib:19.4.1"

    // LDLib2
    implementation "com.lowdragmc.ldlib2:ldlib2-neoforge-1.21.1:2.2.5"

    // Apotheosis
    compileOnly "dev.shadowsoffire:Placebo:1.21.1-9.9.1"
    compileOnly "dev.shadowsoffire:ApothicAttributes:1.21.1-2.9.1"
    compileOnly "dev.shadowsoffire:ApothicSpawners:1.21.1-1.3.4"
    compileOnly "dev.shadowsoffire:ApothicEnchanting:1.21.1-1.5.2"
    compileOnly "dev.shadowsoffire:Apotheosis:1.21.1-8.5.2"
    compileOnly "top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1"
    compileOnly "vazkii.patchouli:Patchouli:1.21-87-NEOFORGE"
    localRuntime "dev.shadowsoffire:GatewaysToEternity:1.21.1-5.1.0"

    // AEKeyTypes Deps
    compileOnly "maven.modrinth:appflux:1.21-2.1.4-neoforge"
    compileOnly "maven.modrinth:ars-energistique:2.1.1-beta"
    compileOnly "maven.modrinth:applied-mekanistics:1.6.3"

    implementation(jarJar("io.github.llamalad7:mixinextras-neoforge:0.5.3"))

    // END OF REQUIRED

    implementation "maven.modrinth:advancedae:1.6.9-1.21.1"
    implementation "maven.modrinth:geckolib:gFmrC8Ru"
    implementation "maven.modrinth:appflux:1.21-2.1.4-neoforge"
    implementation "maven.modrinth:ars-energistique:2.1.1-beta"
    implementation "maven.modrinth:ars-nouveau:5.11.3"
    implementation "maven.modrinth:applied-mekanistics:1.6.3"
    implementation "maven.modrinth:jade:15.10.4+neoforge"
    implementation "maven.modrinth:jei:YAcQ6elZ"
    implementation "maven.modrinth:emi:1.1.22+1.21.1+neoforge"
    implementation "maven.modrinth:mekanism:10.7.17.83"
    implementation "maven.modrinth:mekanism-generators:10.7.17.83"
    implementation "maven.modrinth:extended-ae:1.21-2.2.27-neoforge"
    implementation "maven.modrinth:glodium:1.21-2.2-neoforge"
    implementation "curse.maven:flux-networks-248020:6089446"
    implementation "maven.modrinth:journeymap:1.21.1-6.0.0-beta.53+neoforge"
    implementation "curse.maven:architectury-api-419699:5786327"
    implementation "curse.maven:ftb-chunks-forge-314906:7157142"
    implementation "curse.maven:ftb-library-forge-404465:7420412"
    implementation "curse.maven:ftb-teams-forge-404468:7369021"

    // Distant horizons
    implementation "curse.maven:distant-horizons-508933:7375285"

    // Apotheosis
//    implementation "dev.shadowsoffire:Placebo:1.21.1-9.9.1"
//    implementation "dev.shadowsoffire:ApothicAttributes:1.21.1-2.9.1"
//    implementation "dev.shadowsoffire:ApothicSpawners:1.21.1-1.3.4"
//    implementation "dev.shadowsoffire:ApothicEnchanting:1.21.1-1.5.2"
//    implementation "dev.shadowsoffire:Apotheosis:1.21.1-8.5.2"
//    implementation "top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1"
//    implementation "vazkii.patchouli:Patchouli:1.21-87-NEOFORGE"
//    implementation "dev.shadowsoffire:GatewaysToEternity:1.21.1-5.1.0"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}